--- a/.gitignore
+++ b/.gitignore
@@ -6830,3 +6830,4 @@ CSE_426_Lab/Unity practice/ProjectSettings/XRSettings.asset
 CSE_426_Lab/Unity practice/UserSettings/EditorUserSettings.asset
 CSE_425/slides/lec_14_Animation.pptx
 CSE_425/slides/Lifelike Fluid Simulations.mp4
+CSE_425/slides/lec14_Animation.pptx
